# CountLinesInTextFiles

./: 5.txt  CMakeLists.txt  LinesInTextFiles.cpp  PerfomanceTests.txt  README.md  libs.rar  readme.md
include/: FileGenerator.h  FilesInFolder.h  LineCounter.h  TextFileProcessor.h
